--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
 MJ/Analysis/13TeV/HistFiles/*
 MJ/Analysis/13TeV/Figures/*
 MJ/Analysis/13TeV/Tables/*
+
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+*.d
+!libfastjet.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Compiled executables
+*.exe
+
+# Generated source files
+bin/*
+
+# emacs backups
+*~
+*#
+.#*
+
+# Other
+*.root
+*.log
+*.pdf
+*.eps
+*.tex
+gmon.out
+out
+.nfs*
+.fuse_hidden*
